# kill-the-newsletter.rs

./: .dockerignore  .env  .env.build  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  fly.toml  migration.sql  tailwind.config.js
.github/workflows/: check.yml
migrations/: 20220327_initial_schema.sql
src/: database.rs  http.rs  lib.rs  main.rs  smtp.rs  time.rs  tracing.rs  vars.rs
src/models/: entry.rs  feed.rs  feed_template.rs  mod.rs
src/smtp/: app.rs  mod.rs  parse.rs  state_machine.rs
src/web/: app.rs  errors.rs  handlers.rs  mod.rs  serve_static.rs
templates/: atom.xml  base.html  created.html  index.html  sentinel_entry.html
