[package]
name = "ktn"
version = "0.1.3"
edition = "2018"

[dependencies]
askama = { version = "0", features = ["with-axum"] }
askama_axum = "0"
axum = "0"
chrono = "0"
dotenv = "0"
dotenv_codegen = "0"
r2d2 = "0"
r2d2_sqlite = "0"
rand = "0"
rusqlite = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
tracing-subscriber = "0"
tokio = { version = "1", features = ["full"] }
