[package]
name = "ktn"
version = "0.1.8"
edition = "2021"

[dependencies]
askama = { version = "0", features = ["with-axum"] }
askama_axum = "0"
axum = "0"
chrono = "0"
dotenv = "0"
dotenv_codegen = "0"
mailparse = "0"
rand = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = [ "runtime-tokio-native-tls" , "postgres" ] }
thiserror = "1"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
tracing-bunyan-formatter = "0"
tracing-log = "0"
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0", features = ["full"] }

[features]
tracing_json = []
tracing_noansi = []
